--- a/index.html
+++ b/index.html
@@ -1,12 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vladyslav Nuzhdov</title>
 </head>
 <body>
-    <h1>привет</h1>
+    <table>
+        <tr>
+            <td>
+                <img src="P1010446.JPG" width="200" alt="тут мое фото"/>
+            </td>
+            <td>
+                <h1>Владислав Нуждов</h1>
+                <p> <em><strong> Мое  резюме</strong></em></p>
+            </td>
+        </tr>
+    </table>
+    <hr size="3" noshade color="red"/>
+    <h2>Контактная информация</h2>
+    <ul>
+        <li>адрес:г.Одесса Авангард</li>
+        <li>телефон: 095 555-55-55</li>
+        <li>Ел.почта:vladnuzhdov@mail.com</li>
+    </ul>
+    <h2>Мои соц.сети</h2>
+    <ul>
+        <li> <a href="https://www.instagram.com/nuzhdov_v_/" target="_blank">Instagram</a></li>
+        <li> <a href=" htts://tg.com/vlad" target="_blank">Telegram </a></li>
+    </ul>
+    <hr size="2" noshade />
+    <h2>Информация о себе</h2>
+    <ul>
+        <li>Дата раждения: 30.04.2001</li>
+        <li>Место рождения:г. Червонопартизанск </li>
+        <li>Место проживания:г.Одесса</li>
+</ul>
+<hr size="2" noshade />
+<h2>Образование</h2>
+<ul>
+    <li>Экономика Колледж с 2017 по 2020</li>
+</ul>
+<hr size="2" noshade />
+<h2>Опыт работы</h2>
+<table border="2">
+    <tr>
+        <th>Компания</th>
+        <th>Должность</th>
+        <th>Год</th>
+    </tr>
+    <tr>
+        <td>ABinBevEFES</td>
+        <td>Мерчендайзер</td>
+        <td>09.2019-08.2020 </td>
+        
+    </tr>
+    <tr>
+        <td>"Цитрус"</td>
+        <td>Продавец-консультант</td>
+        <td>09.2020-05.2021</td>
+    </tr>
+    <tr>
+        <td>Collingwood Farm Ltd</td>
+        <td>Разнорабочий</td>
+        <td>06.2021-12.2021</td>
+    </tr>
+    <tr>
+        <td>R-Clinic</td>
+        <td>Санитар в транспортной бригаде</td>
+        <td>06.2022-09.2022</td>
+    </tr>
+</table>
+<hr size="2" noshade />
+<h2>Мои хобби</h2>
+<ol>
+    <li>спорт</li>
+    <li>английский</li>
+    <li>велосипед</li>
+    <li>игры</li>
+</ol>
+<hr>
+<h2>Связаться со мной</h2>
+<form action="/">
+<label for="name">Ваше имя:</label>
+<input type="text"id=name placeholder="Введите имя...">
+
+<br>
+
+<label for="email">Ваш Email:</label>
+<input type="email"id=email placeholder="Введите email...">
+
+<br>
+
+<input type="submit" value="Связаться!">
+</form>
+
+
 </body>
 </html>
